# hasher3

./: CMakeLists.txt  CMakeLists1.txt  input.txt
src/: functions.cpp  functions.h  main.cpp
tests/: hasher_unittests.cpp  main.cpp
